--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
                             <option>Information Science & Engineering</option>
                             <option>Computer Science & Engineering</option>
                             <option>Mechanical Engineering</option>
+                            <option>Civil Engineering</option>
+                            <option>Biotechnology</option>
+                            <option>Aeronautical Engineering</option>
+                            <option>Automobile Engineering</option>
+                            <option>Mechatronics Engineering</option>
                         </select>
                         <div style="display: flex;flex-direction: column;align-items: center;background-color: white;border-radius: 8px;border: 1px solid rgb(218,220,224);"
                             class="w1">
